[package]
name = "ratchet-ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Inter-process communication for Ratchet"

[dependencies]
ratchet-core = { path = "../ratchet-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = "1.8"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }