[package]
name = "ratchet-js"
version.workspace = true
edition.workspace = true

authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JavaScript execution engine for Ratchet"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# JavaScript engine
boa_engine = { version = "0.20", optional = true }
boa_runtime = { version = "0.20", optional = true }

# Schema validation
ratchet-core = { path = "../ratchet-core" }

# HTTP integration
ratchet-http = { path = "../ratchet-http" }

# Logging integration (optional)
ratchet-logging = { path = "../ratchet-logging", optional = true }

# Regex for error parsing
regex = "1.10"

[features]
default = ["javascript", "http", "logging"]
javascript = ["boa_engine", "boa_runtime"]
http = []
logging = ["ratchet-logging"]
all = ["javascript", "http", "logging"]