[package]
name = "ratchet_lib"
version.workspace = true
edition.workspace = true

authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library functionality for the project"

# Dependencies
[dependencies]
# Use workspace-level dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
tracing.workspace = true
lazy_static.workspace = true
chrono.workspace = true
tokio.workspace = true

# For crate-specific dependencies
reqwest = { version = "0.11", features = ["json"] }
boa_engine = "0.17"
boa_runtime = "0.17"
jsonschema = "0.17"
rand = "0.8"
uuid = { version = "1.4", features = ["v4", "serde"] }
lru = "0.10"
zip = "0.6"
tempfile = "3.8"
regex = "1.10"
serde_yaml = "0.9"
async-trait = "0.1"
num_cpus = "1.16"

# Database dependencies
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
sea-orm-migration = "0.12"

# Job scheduling dependencies
tokio-cron-scheduler = "0.9"
cron = "0.12"

# GraphQL and web server dependencies (re-enabled with compatible versions)
async-graphql = { version = "6.0", features = ["uuid", "chrono", "dataloader"] }
async-graphql-axum = "6.0"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
futures = "0.3"

# Testing dependencies (only used in #[cfg(test)])
[dev-dependencies]
tokio-test = "0.4"
axum-test = "13.0"
