[package]
name = "ratchet_lib"
version.workspace = true
edition.workspace = true

authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library functionality for the project"

# Dependencies
[dependencies]
# Use workspace-level dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
tracing.workspace = true
lazy_static.workspace = true
chrono.workspace = true
tokio.workspace = true

# For crate-specific dependencies
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
boa_engine = "0.20"
boa_runtime = "0.20"
jsonschema = "0.17"
rand = "0.8"
uuid = { version = "1.4", features = ["v4", "serde"] }
lru = "0.10"
zip = "0.6"
tempfile = "3.8"
regex = "1.10"
serde_yaml = "0.9"
async-trait = "0.1"
num_cpus = "1.16"
notify = { version = "6.1", features = ["serde"] }

# Logging dependencies
colored = "2.0"
hostname = "0.3"
sysinfo = "0.29"
once_cell = "1.18"
humantime-serde = "1.1"

# Output destination dependencies
csv = "1.3"
gethostname = "0.4"
fastrand = "2.0"

# Database dependencies
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sqlx = { workspace = true }
sea-orm-migration = "1.1"

# Job scheduling dependencies
tokio-cron-scheduler = "0.9"
cron = "0.12"

# GraphQL and web server dependencies (re-enabled with compatible versions)
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = "0.3"
# validator = { version = "0.16", features = ["derive"] }
# nix = { version = "0.27", features = ["signal", "process"] }
# mockall = "0.11"

# Testing dependencies (only used in #[cfg(test)])
[dev-dependencies]
tokio-test = "0.4"
axum-test = "13.0"
http-body-util = "0.1"
wiremock = "0.5"
