[package]
name = "ratchet_lib"
version.workspace = true
edition.workspace = true

authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library functionality for the project"

# Dependencies
[dependencies]
# Use workspace-level dependencies
ratchet-interfaces = { path = "../ratchet-interfaces" }
ratchet-api-types = { path = "../ratchet-api-types" }
ratchet-core = { path = "../ratchet-core" }
ratchet-http = { path = "../ratchet-http" }
ratchet-logging = { path = "../ratchet-logging" }
ratchet-output = { path = "../ratchet-output" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
tracing.workspace = true
lazy_static.workspace = true
chrono.workspace = true
tokio.workspace = true

# For crate-specific dependencies - use workspace versions
reqwest = { workspace = true, features = ["rustls-tls"] }
boa_engine = { version = "0.20", optional = true }
boa_runtime = { version = "0.20", optional = true }
jsonschema = { workspace = true }
rand = "0.8"
uuid = { workspace = true }
lru = { workspace = true }
zip = { version = "0.6", optional = true }
tempfile = "3.8"
regex = "1.10"
serde_yaml = "0.9"
async-trait = "0.1"
num_cpus = "1.16"
notify = { version = "6.1", features = ["serde"] }

# Logging dependencies moved to ratchet-logging

# Output destination dependencies (optional)
csv = { version = "1.3", optional = true }
gethostname = "0.4"
fastrand = "2.0"

# Database dependencies (optional for lighter builds)
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], optional = true }
sqlx = { workspace = true, optional = true }
sea-orm-migration = { version = "1.1", optional = true }

# Job scheduling dependencies
tokio-cron-scheduler = "0.9"
cron = "0.12"

# GraphQL and web server dependencies (optional for lighter builds)
async-graphql = { workspace = true, optional = true }
async-graphql-axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
# validator = { version = "0.16", features = ["derive"] }
# nix = { version = "0.27", features = ["signal", "process"] }
# mockall = "0.11"

# Testing dependencies (only used in #[cfg(test)])
# Feature flags to reduce compilation complexity
[features]
default = ["server", "database", "javascript", "output"]
core = []
server = ["axum", "tower", "tower-http", "async-graphql", "async-graphql-axum", "futures"]
database = ["sea-orm", "sqlx", "sea-orm-migration"]
javascript = ["boa_engine", "boa_runtime"]
output = ["zip", "csv"]
full = ["server", "database", "javascript", "output"]
# Minimal build for CI/testing
minimal = ["core"]

[dev-dependencies]
tokio-test = "0.4"
axum-test = "13.0"
http-body-util = "0.1"
wiremock = "0.5"
