[package]
name = "ratchet-logging"
version.workspace = true
edition.workspace = true

authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured logging infrastructure for Ratchet"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Logging dependencies
colored = { workspace = true }
hostname = "0.4"
sysinfo = { workspace = true }
once_cell = { workspace = true }
humantime-serde = "1.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

# Time and UUID
chrono.workspace = true
uuid.workspace = true

# Regex for pattern matching
regex = { workspace = true }

# Async trait support
async-trait = "0.1"

# Test dependencies
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[features]
default = ["console", "file", "patterns", "llm"]
console = []
file = []
patterns = []
llm = []
all = ["console", "file", "patterns", "llm"]