[package]
name = "ratchet-mcp"
version = "0.0.6"
edition = "2021"
description = "Model Context Protocol (MCP) implementation for Ratchet"
license = "MIT"
repository = "https://github.com/michiel/ratchet"
authors = ["Ratchet Contributors"]

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization and JSON handling
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# HTTP client and server
reqwest = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Additional dependencies
url = { workspace = true }
tokio-stream = { workspace = true }
humantime-serde = "1.1"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }

# Internal dependencies
ratchet-interfaces = { path = "../ratchet-interfaces" }
ratchet-core = { path = "../ratchet-core" }
ratchet-api-types = { path = "../ratchet-api-types" }
# ratchet-error-middleware = { path = "../ratchet-error-middleware" } # DISABLED
ratchet-ipc = { path = "../ratchet-ipc" }
ratchet-runtime = { path = "../ratchet-runtime" }
ratchet-storage = { path = "../ratchet-storage", features = ["seaorm"] }
ratchet-config = { path = "../ratchet-config" }
ratchet-execution = { path = "../ratchet-execution" }
ratchet-js = { path = "../ratchet-js" }
ratchet-http = { path = "../ratchet-http" }
# ratchet_lib = { path = "../ratchet-lib" }  # REMOVED - replaced by ratchet-interfaces

[features]
default = ["server", "client", "transport-stdio", "transport-sse"]
server = []
client = []
transport-stdio = []
transport-sse = ["reqwest/stream", "axum/tokio", "tower/timeout", "tower-http/cors"]

[dev-dependencies]
tokio-test = "0.4"