[package]
name = "ratchet-mcp"
version = "0.0.6"
edition = "2021"
description = "Model Context Protocol (MCP) implementation for Ratchet"
license = "MIT"
repository = "https://github.com/ratchet-runner/ratchet"
authors = ["Ratchet Contributors"]

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization and JSON handling
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# HTTP client and server
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"

# Logging and tracing
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Additional dependencies
url = { workspace = true }
tokio-stream = { workspace = true }
humantime-serde = "1.1"
serde_yaml = "0.9"
serde_urlencoded = "0.7"
base64 = "0.22"
rand = "0.8"

# Internal dependencies
ratchet-interfaces = { path = "../ratchet-interfaces" }
ratchet-core = { path = "../ratchet-core" }
ratchet-api-types = { path = "../ratchet-api-types" }
# ratchet-error-middleware = { path = "../ratchet-error-middleware" } # DISABLED
ratchet-ipc = { path = "../ratchet-ipc" }
ratchet-runtime = { path = "../ratchet-runtime" }
ratchet-storage = { path = "../ratchet-storage", features = ["seaorm"] }
ratchet-config = { path = "../ratchet-config" }
ratchet-execution = { path = "../ratchet-execution" }
ratchet-http = { path = "../ratchet-http" }
ratchet-js = { path = "../ratchet-js", features = ["javascript", "http"] }

# Direct dependency for JavaScript execution
boa_engine = { version = "0.20", optional = true }
# ratchet_lib = { path = "../ratchet-lib" }  # REMOVED - replaced by ratchet-interfaces

[features]
default = ["server", "client", "transport-stdio", "transport-sse", "transport-streamable-http", "javascript"]
javascript = ["boa_engine"]
server = []
client = []
transport-stdio = []
transport-sse = ["ratchet-http/server"]
transport-streamable-http = ["ratchet-http/server"]

[dev-dependencies]
tokio-test = "0.4"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
fastrand = { workspace = true }
ratchet-registry = { path = "../ratchet-registry" }
ratchet-server = { path = "../ratchet-server" }