[package]
name = "ratchet-output"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Output destination system for delivering task results to various targets"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }

# Ratchet dependencies
ratchet-http = { path = "../ratchet-http" }

# HTTP client for webhooks
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

# Template engine
handlebars = "4.5"

# File system operations
tokio-util = "0.7"

# Async utilities
futures = "0.3"

# Random number generation
rand = "0.8"

# Optional features
csv = { version = "1.3", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = ["csv", "yaml"]
csv = ["dep:csv"]
yaml = ["dep:serde_yaml"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
wiremock = "0.5"