[package]
name = "ratchet-plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["sync", "rt", "fs", "time"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# For dynamic loading
libloading = "0.8"
inventory = "0.3"

# For plugin discovery
walkdir = "2.5"
semver = { version = "1.0", features = ["serde"] }

# For configuration
ratchet-config = { path = "../ratchet-config" }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
tempfile = "3.14"
