[package]
name = "ratchet-rest-api"
version.workspace = true
edition.workspace = true

authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API implementation for Ratchet task execution system"

[dependencies]
# Core web framework
axum = { workspace = true, features = ["tokio", "query"] }
tower.workspace = true
tower-http.workspace = true

# Serialization and data handling
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# Authentication
bcrypt = "0.17"

# Async runtime and observability
tokio.workspace = true
tracing.workspace = true

# HTTP utilities
http.workspace = true

# Internal dependencies
ratchet-api-types = { path = "../ratchet-api-types", features = ["openapi"] }
ratchet-interfaces = { path = "../ratchet-interfaces" }
ratchet-web = { path = "../ratchet-web" }
ratchet-core = { path = "../ratchet-core" }
ratchet-mcp = { path = "../ratchet-mcp" }
ratchet-http = { path = "../ratchet-http" }
ratchet-storage = { path = "../ratchet-storage" }
# ratchet-error-middleware = { path = "../ratchet-error-middleware" } # DISABLED

# OpenAPI documentation
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

[dev-dependencies]
axum-test = "17.0"
tokio-test = "0.4"
tower = { workspace = true, features = ["util"] }
hyper = { workspace = true, features = ["client"] }
fastrand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
anyhow = { workspace = true }

