[package]
name = "ratchet-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Task execution runtime for Ratchet"

[dependencies]
ratchet-core = { path = "../ratchet-core" }
ratchet-ipc = { path = "../ratchet-ipc" }
ratchet-resilience = { path = "../ratchet-resilience" }
ratchet-caching = { path = "../ratchet-caching" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
num_cpus = "1.16"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
env_logger = { workspace = true }