[package]
name = "ratchet-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Task execution runtime for Ratchet"

[dependencies]
ratchet-core = { path = "../ratchet-core" }
ratchet-ipc = { path = "../ratchet-ipc" }

serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
thiserror = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
num_cpus = "1.16"
regex = "1.10"

# JavaScript execution dependencies
boa_engine = { version = "0.20", optional = true }
boa_runtime = { version = "0.20", optional = true }

[features]
default = ["javascript"]
javascript = ["boa_engine", "boa_runtime"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
env_logger = { workspace = true }