[package]
name = "ratchet-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies - modular API implementations
ratchet-api-types = { path = "../ratchet-api-types" }
ratchet-interfaces = { path = "../ratchet-interfaces" }
ratchet-web = { path = "../ratchet-web" }
ratchet-rest-api = { path = "../ratchet-rest-api" }
ratchet-graphql-api = { path = "../ratchet-graphql-api" }
ratchet-config = { path = "../ratchet-config" }
ratchet-storage = { path = "../ratchet-storage", features = ["seaorm"] }
ratchet-registry = { path = "../ratchet-registry" }
ratchet-http = { path = "../ratchet-http" }
ratchet-output = { path = "../ratchet-output" }
ratchet-execution = { path = "../ratchet-execution" }

# Workspace dependencies - legacy during migration
# ratchet_lib = { path = "../ratchet-lib" } # REMOVED - using modern modular components

# MCP dependencies
ratchet-mcp = { path = "../ratchet-mcp", optional = true, default-features = true }

# External dependencies
axum = { workspace = true, features = ["tokio", "query"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
cron = { workspace = true }
tokio-cron-scheduler = { workspace = true }
rustls = "0.23"
base64 = { workspace = true }
rustls-pemfile = "2.1"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }

[features]
default = ["mcp"]
mcp = ["ratchet-mcp"]

[dev-dependencies]
tokio-test = { workspace = true }

