[package]
name = "ratchet-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage abstraction and repository pattern for Ratchet"

[dependencies]
ratchet-core = { path = "../ratchet-core" }
ratchet-caching = { path = "../ratchet-caching" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = "1.10"
fastrand = "2.0"
cron = "0.12"

# Database dependencies (optional)
sea-orm = { version = "1.1", optional = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", optional = true }
sea-query = { version = "0.32", optional = true }
sqlx = { workspace = true, optional = true }

# Testing dependencies (optional)
tempfile = { version = "3.8", optional = true }
mockall = { version = "0.12", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = ["database"]
database = ["sea-orm", "sea-orm-migration", "sea-query", "sqlx"]
seaorm = ["database"]  # Feature flag for SeaORM integration
postgres = ["database"]
mysql = ["database"]
testing = ["database", "tempfile", "mockall", "serde_yaml"]  # Feature flag for testing utilities

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }