[package]
name = "ratchet-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage abstraction and repository pattern for Ratchet"

[dependencies]
ratchet-core = { path = "../ratchet-core" }
ratchet-interfaces = { path = "../ratchet-interfaces" }
ratchet-api-types = { path = "../ratchet-api-types" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = "1.10"
fastrand = "2.0"
cron = { workspace = true }
sha2 = "0.10"

# Database dependencies (optional)
sea-orm = { version = "1.1", optional = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", optional = true }
sea-query = { version = "0.32", optional = true }
sqlx = { workspace = true, optional = true }

# Testing dependencies (optional)
tempfile = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
clap = { version = "4.4", optional = true, features = ["derive"] }

[features]
default = ["database"]
database = ["sea-orm", "sea-orm-migration", "sea-query", "sqlx"]
seaorm = ["database"]  # Feature flag for SeaORM integration
postgres = ["database"]
mysql = ["database"]
testing = ["seaorm", "tempfile", "mockall", "serde_yaml", "clap"]  # Feature flag for testing utilities

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }