[package]
name = "ratchet-web"
version.workspace = true
edition.workspace = true

authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable web middleware and utilities for Ratchet APIs"

[dependencies]
# Core web framework
axum = { workspace = true, features = ["tokio", "query"] }
tower.workspace = true
tower-http.workspace = true

# Serialization and data handling
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# Async runtime and observability
tokio = { workspace = true, features = ["time", "sync"] }
tracing.workspace = true

# Rate limiting
lru.workspace = true

# API types integration
ratchet-api-types = { path = "../ratchet-api-types" }

# HTTP utilities
http.workspace = true
hyper.workspace = true

[dev-dependencies]
axum-test = "13.0"
tokio-test = "0.4"